--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,10 @@ dependencies:
   firebase_storage:
   fluttertoast:
   shared_preferences: ^0.5.7
+  rflutter_alert: ^1.0.3
+  flutter_icons: ^1.0.0+1
+  url_launcher: ^5.4.1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
