--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   rflutter_alert: ^1.0.3
   flutter_icons: ^1.0.0+1
   url_launcher: ^5.4.1
+  youtube_player_flutter: ^6.0.3+2
 
 dev_dependencies:
   flutter_test:
