--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   flutter_icons: ^1.0.0+1
   url_launcher: ^5.4.1
   youtube_player_flutter: ^6.0.3+2
+  search_page: ^1.2.0
+  google_maps_flutter: ^0.5.11
 
 dev_dependencies:
   flutter_test:
