--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   youtube_player_flutter: ^6.0.3+2
   search_page: ^1.2.0
   google_maps_flutter: ^0.5.11
+  music_player: ^0.1.4
+  path_provider:
+  flutter_cache_manager:
 
 dev_dependencies:
   flutter_test:
