--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,21 +24,35 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   liquid_swipe: ^1.4.3
+  flutter_icons: ^1.0.0+1
+  provider:
+  flutter_share: ^1.0.2+1
+  cached_network_image:
+  flutter_launcher_icons: ^0.7.4
   firebase_auth:
   google_sign_in:
+  flutter_custom_clippers: ^1.1.0
   cloud_firestore:
   firebase_storage:
   fluttertoast:
+  image_picker:
+  giffy_dialog:
+  firebase_core: ^0.4.3+2
+  firebase_database:
   shared_preferences: ^0.5.7
-  rflutter_alert: ^1.0.3
-  flutter_icons: ^1.0.0+1
+  connectivity: ^0.4.8+2
+  flutter_auth_buttons: ^0.3.1
+  share: ^0.6.2+3
   url_launcher: ^5.4.1
+  link: ^1.0.0
+  rflutter_alert: ^1.0.3
+  http: ^0.12.0+2
   youtube_player_flutter: ^6.0.3+2
-  search_page: ^1.2.0
-  google_maps_flutter: ^0.5.11
   music_player: ^0.1.4
   path_provider:
   flutter_cache_manager:
+  search_page: ^1.2.0
+  google_maps_flutter: ^0.5.11
 
 dev_dependencies:
   flutter_test:
