--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,7 +58,7 @@ dependencies:
   flutter_svg: ^0.17.4
   quiver: ^2.0.0
 
-dev_dependencies:
+ev_dependencies:
   flutter_test:
     sdk: flutter
 
