--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   share: ^0.6.2+3
   url_launcher: ^5.4.1
   link: ^1.0.0
+  shimmer:
   rflutter_alert: ^1.0.3
   http: ^0.12.0+2
   youtube_player_flutter: ^6.0.3+2
