--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   google_fonts: ^1.1.0
   flutter_svg: ^0.17.4
   quiver: ^2.0.0
+  font_awesome_flutter: ^8.8.1
 
 ev_dependencies:
   flutter_test:
