--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,10 +60,17 @@ dependencies:
   quiver: ^2.0.0
   font_awesome_flutter: ^8.8.1
 
-ev_dependencies:
+dev_dependencies:
+  flutter_launcher_icons: "^0.7.0"
   flutter_test:
     sdk: flutter
-
+flutter_icons:
+  ios: true
+  android: true
+  image_path_ios: "assets/launcher/icon.png"
+  image_path_android: "assets/launcher/icon.png"
+  adaptive_icon_background: "assets/launcher/background.png"
+  adaptive_icon_foreground: "assets/launcher/foreground.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
